tests/errors/const_reassign.lq
# Reassigning a const is a clean compile error, not a silent overwrite.
const x = 1
x = 2
